fix(client): fix vertical align of several elements

--- a/src/client/assets/javascripts/features/toolbar/components/AudioPlayer/AudioPlayer.scss
+++ b/src/client/assets/javascripts/features/toolbar/components/AudioPlayer/AudioPlayer.scss
@@ -11,7 +11,9 @@ input[type=range]::-webkit-slider-thumb {
 input[type=range]:focus {
   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
-
+.audioPlayer {
+  height: 0px;
+}
 input[type=range]::-ms-track {
   width: 100%;
   cursor: pointer;
