--- a/src/client/assets/javascripts/features/toolbar/components/CurrentTrackStatus/CurrentTrackStatus.scss
+++ b/src/client/assets/javascripts/features/toolbar/components/CurrentTrackStatus/CurrentTrackStatus.scss
@@ -8,7 +8,8 @@ $iconOpacity: 0.3;
 
 .currentTrackTitle {
   float: left;
-  margin-bottom: 0.6em;
+  margin-top: 1em;
+  margin-bottom: 0;
 
   text-align: center;
 
